syntax = "proto3";

message User {
  string lastname = 1;
  string firstname = 2;
  string middlename = 3;
  int32 age = 4;
  enum Gender {
    MALE = 0;
    FEMALE = 1;
  }
  Gender gender = 5;
}

message Result {
  bool succeeded = 1;
  string error = 2;
  string message = 3;
}

message ManyUsers{
  repeated User users = 1;
  int32 pageNum = 2;
  string error = 3;
}

message ManyRequest {
  uint32 pageLength = 1;
  uint32 pageNum = 2;
}

message Id {
  uint32 id = 1;
}

service RegistrationService {
  rpc get(Id) returns (User);
  rpc put(User) returns (Result);
  rpc delete(Id) returns (Result);
  rpc getMany(ManyRequest) returns (stream ManyUsers);
}
